# learning-cpp

./: README.md  main.cpp
.github/workflows/: c-cpp.yml
CMakeProject2/: CMakeProject2.cpp
D000-DesignPatterns/: README.md
D001-header-files/: CMakeLists.txt  README.md
D001-header-files/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  command.bash  main.cpp
D001-header-files/hello_world/: main.cpp
D002-include-guards/: .gitignore  CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.h
D002-include-guards/broken-version/: utils.h
D002-include-guards/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
D002-include-guards/correct-version/: CMakeLists.txt  command.bash  utils.h
D002-include-guards/include-guards-demo/broken-version/: main.cpp
D002-include-guards/include-guards-demo/correct-version/: main.cpp
D003-pointers/: README.md
D003-pointers/calculator/: calculator.cpp  calculator.h  main.cpp
D003-pointers/math-engine/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
D003-pointers/pointer/: main.cpp
D003-pointers/pointer-function/: CMakeLists.txt  main.cpp
D004-pointers-advanced/: README.md
D004-pointers-advanced/calculator/: main.cpp
D005-teletrack-sim-kickoff/: README.md
D006-ci-implementation/: README.md
D007-gtest-cmake-conan/: README.md
D008-memory/: .gitignore  CMakeLists.txt  run.sh
D008-memory/include/: ObjectLifecycle.h
D008-memory/src/: ObjectLifecycle.cpp  main.cpp
D008-memory/test/: test_ObjectLifecycle.cpp
D008-raw-pointers/: CMakeLists.txt  README.md  conanfile.txt  run.sh
D008-raw-pointers/include/: RawPointer.h
D008-raw-pointers/src/: RawPointer.cpp  main.cpp
D008-raw-pointers/test/: test_RawPointer.cpp
D008-setting-up-mqtt/: README.md
D009/: README.md
D010/: README.md
D011/: README.md
D012/: README.md
D013/: README.md
D014-Teletrack-Sim-Reboot/: README.md
D015/: README.md
D016-project-teletrack-sim-googletest/: README.md
D017-conan-indepth/: README.md
D018/: CMakeLists.txt
D018-gof-Factory/: CMakeLists.txt  README.md  conanfile.py
D018-gof-Factory/include/: Car.h  Ship.h  Transport.h
D018-gof-Factory/src/: Car.cpp  Ship.cpp  main.cpp
D018/src/: main.cpp
D019/: usecases.md
D019-gof-observer/: CMakeLists.txt  README.md
D019-gof-observer/src/: main.cpp  observer.cpp
D019-observer/: README.md
D019-observer/src/: main.cpp
D021-adapter/: CMakeLists.txt  README.md
D021-adapter/src/: main.cpp
D021-gof-adapter/src/: adapter.cpp
D022-project-report/: README.md
D022-project-report/diagrams/: design-pattern-after-seq.txt  tp-uc-000-analysis-class.txt  tp-uc-000-design-seq.txt  tp-uc-001-design-class.txt  tp-uc-001-design-seq .txt
D023-keywords-identifiers/: README.md
D024-literals-operators/: README.md
D025-State-Machine/: CMakeLists.txt  conanfile.py
D025-State-Machine/include/: traffic_light.h
D025-State-Machine/src/: main.cpp  traffic_light.cpp
D025-State-Machine/tests/: test_traffic_light.cpp
D099-Archive/learncpp-hello-world/: CMakeLists.txt
D099-Archive/project-teletrack-sim/: .gitignore  CMakeLists.txt  conanfile.txt
D099-Archive/project-teletrack-sim/app/: main.cpp
D099-Archive/teletrack_sim/: README.md  build-wsl.sh
D099-Archive/teletrack_sim/docker/: Dockerfile
D099-Archive/teletrack_sim/modules/aggregator/: CMakeLists.txt
D099-Archive/teletrack_sim/modules/aggregator/include/: aggregator.h
D099-Archive/teletrack_sim/modules/aggregator/src/: aggregator.cpp
D099-Archive/teletrack_sim/modules/engine/: CMakeLists.txt
D099-Archive/teletrack_sim/modules/engine/include/: engine_simulator.h
D099-Archive/teletrack_sim/modules/engine/src/: engine_simulator.cpp
D099-Archive/teletrack_sim/modules/gnss/include/: gnss_simulator.h
D099-Archive/teletrack_sim/modules/gnss/src/: gnss_simulator.cpp
D099-Archive/teletrack_sim/modules/gnss/test/: test_gnss_simulator.cpp
D099-Archive/teletrack_sim/modules/logger/: CMakeLists.txt
D099-Archive/teletrack_sim/modules/logger/src/: logger.cpp
learncpp-hello-world/: .gitignore  CMakeLists.txt  learncpp-hello-world.cpp  learncpp-hello-world.h
project-teletrack-sim/: .gitignore  CMakeLists.txt  build-wsl.sh  build.sh  project-teletrack-sim.cpp  project-teletrack-sim.h
project-teletrack-sim/app/: CMakeLists.txt
teletrack_sim/: .gitignore  CMakeLists.txt  README.md  build-wsl.sh  build_and_run.bash  conanfile.txt  main.cpp
teletrack_sim/docker/: run-dev.sh
teletrack_sim/modules/aggregator/src/: aggregator.cpp
teletrack_sim/modules/engine/src/: engine_simulator.cpp
teletrack_sim/modules/gnss/: CMakeLists.txt
teletrack_sim/modules/gnss/include/: gnss_simulator.h
teletrack_sim/modules/gnss/src/: gnss_simulator.cpp
teletrack_sim/modules/logger/include/: logger.h
teletrack_sim/modules/logger/src/: logger.cpp
teletrack_sim/modules/mqtt_publisher/: CMakeLists.txt
teletrack_sim/modules/mqtt_publisher/include/mqtt_publisher/: IPublisher.h  MqttPublisher.h
teletrack_sim/modules/mqtt_publisher/src/: MqttPublisher.cpp
teletrack_sim/modules/mqtt_publisher/test/: CMakeLists.txt  MqttPublisherTest.cpp
